--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -21,6 +21,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install flake8 pytest
           pip install numpy
+          pip install poetry
+          poetry install
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Lint with flake8
         run: |
