--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -21,15 +21,19 @@ jobs:
           python -m pip install --upgrade pip
           pip install numpy
           pip install poetry
+          pip install ni-python-styleguide
           poetry install
           pip install flake8 pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Lint with flake8
+      - name: Run linters
         run: |
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          # execute python style guide and stop execution if there are any errors
+          ni-python-styleguide lint ./nidaqmx/
+          ni-python-styleguide lint ./nidaqmx_examples/
       - name: Test with pytest
         run: |
           poetry run pytest
