--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,11 +37,11 @@ numpy = [
 ]
 six = "^1.16"
 # This functionality was merged into python stdlib beginning in 3.8
-importlib_metadata = {version="^4.10", python="~3.7"}
+importlib_metadata = {version="4.2", python="~3.7"}
 # Documentation, must be in main dependencies (but optional) list for
 # readthedocs integration.
 # See https://github.com/readthedocs/readthedocs.org/issues/4912.
-Sphinx = {version="^4.4", optional=true}
+Sphinx = {version="^4.3", optional=true}
 sphinx_rtd_theme = {version="^1.0", optional=true}
 
 [tool.poetry.extras]
@@ -52,6 +52,7 @@ docs = ["sphinx", "sphinx_rtd_theme"]
 pytest = "^6.2"
 pykka = "^3.0"
 tox = "^3.24"
+ni-python-styleguide = "^0.3"
 
 [build-system]
 requires = ["poetry>=1.1.12"]
